@@ -11,7 +11,7 @@ Authors@R: c(person(given = "Michael", family = "Friendly", role=c("aut", "cre")
             )
 Maintainer: Michael Friendly <friendly@yorku.ca>
 Depends: R (>= 2.10), vcd, gnm (>= 1.0.3)
-Suggests: ca,gmodels,Fahrmeir,effects,VGAM,plyr,rgl,lmtest,nnet,ggplot2,Sleuth2,car,lattice
+Suggests: ca,gmodels,Fahrmeir,effects,VGAM,plyr,rgl,lmtest,nnet,ggplot2,Sleuth2,car,lattice,VGAM
 Imports: MASS
 Description: Provides additional data sets, methods and documentation to complement the vcd package for Visualizing Categorical Data
     and the gnm package for Generalized Nonlinear Models.
